# haskyll_template

./: README.md  site.cabal  stack.yaml
_site/: index.html  page1.html  page2.html
_site/courses/: page3.html  page4.html
content/: index.md  page1.md  page2.md
content/courses/: page3.md  page4.md
src/: Main.hs
template/: default.html  header.html
