name:           site
version:        0.1.0.0
author:         jaiyalas
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  README.md

executable site
  main-is: Main.hs
  hs-source-dirs:
    src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        base,
        containers >= 0.5,
        hakyll >= 4.6.9.0,
        pandoc >= 1.13.2.1,
        time >= 1.5
  default-language: Haskell2010
